<?xml version="1.0"?>
<package format="2">
  <name>camsense_driver</name>
  <version>1.0.0</version>
  <description>
    ROS package for Camesense-X1.
  </description>
  <license>BSD</license>
  <maintainer email="bafenijn@gmail.com">Vidicon (Bram Fenijn)</maintainer>
  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>boost</depend>
  <exec_depend>rviz</exec_depend>
</package>
